--- a/src/app/component/paymentMethod/payment-method-create/payment-method-create.component.html
+++ b/src/app/component/paymentMethod/payment-method-create/payment-method-create.component.html
@@ -1,23 +1,19 @@
 <mat-card>
-    <mat-card-title>Nova Forma de pagamento</mat-card-title>
+    <mat-card-title>Nova Forma de Pagamento</mat-card-title>
     <form>
         <mat-form-field>
-            <input matInput placeholder="Tipo" [(ngModel)]="paymentMethod.type" name="type">
+            <input matInput placeholder="Tipo" [(ngModel)]="paymentMethod.fpgTipo" name="fpgTipo">
         </mat-form-field>
         <mat-form-field>
-            <input matInput placeholder="Descriçao" [(ngModel)]="paymentMethod.description" name="description">
+            <input matInput placeholder="Descrição" [(ngModel)]="paymentMethod.fpgDescricao" name="fpgDescricao">
         </mat-form-field>
-        <mat-form-field>
-            <input matInput placeholder="Status" [(ngModel)]="paymentMethod.stats" name="stats">
-        </mat-form-field>
+
+        <button mat-raised-button (click)="createPaymentMethod()" color="primary">
+            Salvar
+        </button>
+       
+        <button mat-raised-button (click)="cancel()">
+            Cancelar
+        </button>
     </form>
-
-    <button mat-raised-button (click)="createPaymentMethod()" color="primary">
-        Salvar
-    </button>
-   
-    <button mat-raised-button (click)="cancel()">
-        Cancelar
-    </button>
-
 </mat-card>
