--- a/src/app/component/paymentMethod/payment-method-read/payment-method-read.component.html
+++ b/src/app/component/paymentMethod/payment-method-read/payment-method-read.component.html
@@ -1,43 +1,38 @@
 <div class="mat-elevation-z4">
-    <table mat-table [dataSource]="paymentMethods">
-      <!-- Id Column -->
-      <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef>Id</th>
-        <td mat-cell *matCellDef="let row">{{row.id}}</td>
-      </ng-container>
- 
-      <!-- Description Column -->
-      <ng-container matColumnDef="description">
-        <th mat-header-cell *matHeaderCellDef>Descrição</th>
-        <td mat-cell *matCellDef="let row">{{row.description}}</td>
-      </ng-container>
+  <table mat-table [dataSource]="paymentMethods">
+    <!-- Id Column -->
+    <ng-container matColumnDef="fpgId">
+      <th mat-header-cell *matHeaderCellDef>Id</th>
+      <td mat-cell *matCellDef="let row">{{row.fpgId}}</td>
+    </ng-container>
 
-      <!-- Type Column -->
-      <ng-container matColumnDef="type">
-        <th mat-header-cell *matHeaderCellDef>Tipo</th>
-        <td mat-cell *matCellDef="let row">{{row.type}}</td>
-      </ng-container>
+    <!-- Description Column -->
+    <ng-container matColumnDef="fpgDescricao">
+      <th mat-header-cell *matHeaderCellDef>Descrição</th>
+      <td mat-cell *matCellDef="let row">{{row.fpgDescricao}}</td>
+    </ng-container>
 
-      <!-- Stats Column -->
-      <ng-container matColumnDef="stats">
-        <th mat-header-cell *matHeaderCellDef>Estatísticas</th>
-        <td mat-cell *matCellDef="let row">{{row.stats}}</td>
-      </ng-container>
+    <!-- Type Column -->
+    <ng-container matColumnDef="fpgTipo">
+      <th mat-header-cell *matHeaderCellDef>Tipo</th>
+      <td mat-cell *matCellDef="let row">{{row.fpgTipo}}</td>
+    </ng-container>
 
-      <!-- Action Column -->
-      <ng-container matColumnDef="action">
-        <th mat-header-cell *matHeaderCellDef>Ações</th>                    
-        <td mat-cell *matCellDef="let row">
-            <a routerLink="/payment-methods/update/{{ row.id }}" class="edit">
-                <i class="material-icons">edit</i>
-            </a>
-            <a routerLink="/payment-methods/delete/{{ row.id }}" class="delete">
-                <i class="material-icons">delete</i>
-            </a>
-        </td>
-      </ng-container>
- 
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
+
+    <!-- Action Column -->
+    <ng-container matColumnDef="action">
+      <th mat-header-cell *matHeaderCellDef>Ações</th>                    
+      <td mat-cell *matCellDef="let row">
+          <a routerLink="/payment-methods/update/{{ row.fpgId }}" class="edit">
+              <i class="material-icons">edit</i>
+          </a>
+          <a routerLink="/payment-methods/delete/{{ row.fpgId }}" class="delete">
+              <i class="material-icons">delete</i>
+          </a>
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
 </div>
