--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
+<!-- Componente de cabeçalho da aplicação -->
 <app-header></app-header>
+
+<!-- Componente de navegação da aplicação -->
 <app-nav></app-nav>
+
+<!-- Componente de rodapé da aplicação -->
 <app-footer></app-footer>
