--- a/src/app/views/product-crud/product-crud.component.html
+++ b/src/app/views/product-crud/product-crud.component.html
@@ -1,6 +1,7 @@
-<button mat-raised-button (click) = "navigateToProductCreate()" color = "primary">
+<!-- Botão para criar um novo produto -->
+<button mat-raised-button (click)="navigateToProductCreate()" color="primary">
     Novo Produto
 </button>
 
-
+<!-- Componente para leitura de produtos -->
 <app-product-read></app-product-read>
