--- a/src/app/component/product/product-read/product-read.component.html
+++ b/src/app/component/product/product-read/product-read.component.html
@@ -1,47 +1,47 @@
 <div class="mat-elevation-z4">
+  <!-- Tabela do Angular Material para exibir a lista de produtos -->
   <table mat-table [dataSource]="products">
-    <!-- Id Column -->
+
+    <!-- Definição da coluna para o ID do produto -->
     <ng-container matColumnDef="proId">
       <th mat-header-cell *matHeaderCellDef>Id</th>
       <td mat-cell *matCellDef="let row">{{row.proId}}</td>
     </ng-container>
 
-    <!-- Name Column -->
+    <!-- Definição da coluna para o nome do produto -->
     <ng-container matColumnDef="proNome">
       <th mat-header-cell *matHeaderCellDef>Nome</th>
       <td mat-cell *matCellDef="let row">{{row.proNome}}</td>
     </ng-container>
 
-    <!-- Cost Price Column -->
+    <!-- Definição da coluna para o preço de custo do produto -->
     <ng-container matColumnDef="proPrecoCusto">
       <th mat-header-cell *matHeaderCellDef>Preço de Custo</th>
       <td mat-cell *matCellDef="let row">{{row.proPrecoCusto | currency: 'BRL'}}</td>
     </ng-container>
 
-    <!-- Sale Price Column -->
+    <!-- Definição da coluna para o preço de venda do produto -->
     <ng-container matColumnDef="proPrecoVenda">
       <th mat-header-cell *matHeaderCellDef>Preço de Venda</th>
       <td mat-cell *matCellDef="let row">{{row.proPrecoVenda | currency: 'BRL'}}</td>
     </ng-container>
 
-    <!-- Action Column -->
+    <!-- Definição da coluna para ações (editar e deletar) -->
     <ng-container matColumnDef="action">
       <th mat-header-cell *matHeaderCellDef>Ações</th>                    
       <td mat-cell *matCellDef="let row">
           <a routerLink="/products/update/{{ row.proId }}" class="edit">
-              <i class="material-icons">
-                  edit
-              </i>
+              <i class="material-icons">edit</i>
           </a>
           <a routerLink="/products/delete/{{ row.proId }}" class="delete">
-              <i class="material-icons">
-                  delete
-              </i>
+              <i class="material-icons">delete</i>
           </a>
       </td>
     </ng-container>
 
+    <!-- Linhas do cabeçalho da tabela -->
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <!-- Linhas do corpo da tabela -->
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
 </div>
