--- a/src/app/component/template/header/header.component.html
+++ b/src/app/component/template/header/header.component.html
@@ -1,14 +1,15 @@
-<mat-toolbar class="header" met-elevation-z4>
+<mat-toolbar class="header" mat-elevation-z4>
+    <!-- Logo da aplicação com link para a página inicial -->
     <span>
         <a routerLink="/">
             <img class="logo" src="assets/img/logo-senai.png" alt="logo">
         </a>
     </span>
+    
+    <!-- Grupo de título com ícone e texto -->
     <span class="title-group">
         <a>
-            <i class="material-icons">
-                home
-            </i>
+            <i class="material-icons">home</i> <!-- Ícone de início -->
             Inicio
         </a>
     </span>
