--- a/src/app/component/template/nav/nav.component.css
+++ b/src/app/component/template/nav/nav.component.css
@@ -1,19 +1,24 @@
-.sidenav{
-    background-color: #81749c;
-    width: 200px;
-}
-.sidenav a{
-    color: #fff;
-}
-.sidenav i{
-    padding-right: 10px;
+/* Estilo para a barra lateral (sidenav) */
+.sidenav {
+    background-color: #81749c; /* Cor de fundo da barra lateral */
+    width: 200px; /* Largura fixa da barra lateral */
 }
 
-.content{
-    padding: 16px;
-    background-color: #fff;
+.sidenav a {
+    color: #fff; /* Cor do texto dos links na barra lateral */
 }
 
-span{
-    font-weight: bold;
+.sidenav i {
+    padding-right: 10px; /* Espaçamento à direita do ícone na barra lateral */
+}
+
+/* Estilo para o conteúdo principal */
+.content {
+    padding: 16px; /* Espaçamento interno do conteúdo */
+    background-color: #fff; /* Cor de fundo do conteúdo */
+}
+
+/* Estilo para elementos span */
+span {
+    font-weight: bold; /* Define o texto em negrito */
 }
