--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,6 +1,9 @@
 <mat-card class="home mat-elevation-z3">
-    <mat-card-title class="title">Sistema Auto-Peças</mat-card-title>
-    <mat-card-subtitle class="subtitle">
+  <!-- Título do cartão -->
+  <mat-card-title class="title">Sistema Auto-Peças</mat-card-title>
+  
+  <!-- Subtítulo do cartão -->
+  <mat-card-subtitle class="subtitle">
       Em desenvolvimento.
-    </mat-card-subtitle>
+  </mat-card-subtitle>
 </mat-card>
