--- a/src/app/component/product/product-read/product-read.component.css
+++ b/src/app/component/product/product-read/product-read.component.css
@@ -1,4 +1,5 @@
 table{
+    background-color: #725b75;
     width: 100%;
 }
 
@@ -9,3 +10,8 @@ table{
 .delete > i{
     color: #e35e6b;
 }
+
+th, td{
+    color: #e3cebd;
+}
+
