--- a/src/app/component/template/nav/nav.component.html
+++ b/src/app/component/template/nav/nav.component.html
@@ -7,6 +7,10 @@
                 <i class="material-icons">home</i> <!-- Ícone de início -->
                 <span>Início</span>
             </a>
+            <a mat-list-item routerLink="/clientes">
+                <i class="material-icons">people</i> <!-- Ícone de cliente -->
+                <span>Cliente</span>
+            </a>
 
             <!-- Link para a página de produtos -->
             <a mat-list-item routerLink="/products">
