--- a/src/app/component/cliente/cliente-create/cliente-create.component.html
+++ b/src/app/component/cliente/cliente-create/cliente-create.component.html
@@ -18,6 +18,9 @@
 <mat-form-field>
     <input matInput placeholder="Telefone" [(ngModel)]="cliente.cliTelefone" name="cliTelefone">
 </mat-form-field>
+<mat-form-field>
+    <input matInput placeholder="Endereço" [(ngModel)]="cliente.cliEndereco" name="cliEndereco">
+</mat-form-field>
 </form>
 
 <button mat-raised-button (click) = "createCliente()" color="primary">
