--- a/src/app/component/cliente/cliente-update/cliente-update.component.html
+++ b/src/app/component/cliente/cliente-update/cliente-update.component.html
@@ -15,6 +15,9 @@
     <mat-form-field>
         <input matInput placeholder="Telefone" [(ngModel)]="cliente.cliTelefone" name="cliTelefone">
     </mat-form-field>
+    <mat-form-field>
+        <input matInput placeholder="Endereço" [(ngModel)]="cliente.cliEndereco" name="cliEndereco">
+    </mat-form-field>
 </form>
 
 <button mat-raised-button (click)="updateCliente()" color="primary">
