--- a/src/app/component/product/product-delete/product-delete.component.html
+++ b/src/app/component/product/product-delete/product-delete.component.html
@@ -10,6 +10,12 @@
         <mat-form-field>
             <input matInput placeholder="Preço de venda (R$)" [value]="product.proPrecoVenda" name="proPrecoVenda" disabled>
         </mat-form-field>
+        <mat-form-field>
+            <input matInput placeholder="Quantidade" [value]="product.proQuantidade" name="proQuantidade" disabled>
+        </mat-form-field>
+        <mat-form-field>
+            <input matInput placeholder="Descrição" [value]="product.proDescricao" name="proDescricao" disabled>
+        </mat-form-field>
     </form>
 
     <button mat-raised-button (click)="deleteProduct()" color="warn">
