--- a/src/app/component/product/product-read/product-read.component.html
+++ b/src/app/component/product/product-read/product-read.component.html
@@ -26,6 +26,17 @@
       <td mat-cell *matCellDef="let row">{{row.proPrecoVenda | currency: 'BRL'}}</td>
     </ng-container>
 
+    <ng-container matColumnDef="proQuantidade">
+      <th mat-header-cell *matHeaderCellDef>Quantidade</th>
+      <td mat-cell *matCellDef="let row">{{row.proQuantidade}}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="proDescricao">
+      <th mat-header-cell *matHeaderCellDef>Descrição</th>
+      <td mat-cell *matCellDef="let row">{{row.proDescricao}}</td>
+    </ng-container>
+
+
     <!-- Definição da coluna para ações (editar e deletar) -->
     <ng-container matColumnDef="action">
       <th mat-header-cell *matHeaderCellDef>Ações</th>                    
