--- a/src/app/component/product/product-create/product-create.component.html
+++ b/src/app/component/product/product-create/product-create.component.html
@@ -6,26 +6,50 @@
         <!-- Formulário para entrada de dados do novo produto. Os campos são vinculados ao objeto 'product' através do ngModel -->
         <mat-form-field>
             <!-- Campo de entrada para o nome do produto. O valor é vinculado à propriedade 'proNome' do objeto 'product' -->
-            <input matInput placeholder="Nome" [(ngModel)]="product.proNome" name="proNome">
+            <input matInput placeholder="Nome" [(ngModel)]="product.proNome" name="proNome" placeholder="Nome do Produto" required >
         </mat-form-field>
         
         <mat-form-field>
             <!-- Campo de entrada para o preço de custo do produto. O valor é vinculado à propriedade 'proPrecoCusto' do objeto 'product' -->
-            <input matInput placeholder="Preço de Custo (R$)" [(ngModel)]="product.proPrecoCusto" name="proPrecoCusto">
+            <mat-label>Preço de Custo (R$)</mat-label>
+            <input matInput placeholder="Preço de Custo (R$)" [(ngModel)]="product.proPrecoCusto" name="proPrecoCusto" type="number" required>
         </mat-form-field>
         
         <mat-form-field>
             <!-- Campo de entrada para o preço de venda do produto. O valor é vinculado à propriedade 'proPrecoVenda' do objeto 'product' -->
-            <input matInput placeholder="Preço de Venda (R$)" [(ngModel)]="product.proPrecoVenda" name="proPrecoVenda">
+            <mat-label>Preço de Venda (R$)</mat-label>
+            <input matInput placeholder="Preço de Venda (R$)" [(ngModel)]="product.proPrecoVenda" name="proPrecoVenda" type="number" prequired>
         </mat-form-field>
 
         <mat-form-field>
-            <input matInput placeholder="Quantidade" [(ngModel)]="product.proQuantidade" name="proQuantidade">
+            <mat-label>Quantidade</mat-label>
+            <input matInput placeholder="Quantidade" [(ngModel)]="product.proQuantidade" name="proQuantidade" type="number" required>
         </mat-form-field>
 
         <mat-form-field>
             <input matInput placeholder="Descrição" [(ngModel)]="product.proDescricao" name="proDescricao">
         </mat-form-field>
+
+        <mat-form-field>
+            <input matInput placeholder="Codigo de Barras" [(ngModel)]="product.proCodigoBarras" name="proCodigoBarras" required maxlength="13">
+        </mat-form-field>
+
+        
+        <mat-form-field>
+            <input matInput placeholder="Marca" [(ngModel)]="product.proMarca" name="proMarca" required>
+        </mat-form-field>
+
+        <mat-form-field>
+            <mat-select placeholder="Ex: True or False" [(ngModel)]="product.proAtivo" name="proAtivo" required>
+              <mat-option [value]="true">True</mat-option>
+              <mat-option [value]="false">False</mat-option>
+            </mat-select>
+          </mat-form-field>
+
+          <mat-form-field>
+            <input matInput placeholder="Categoria" [(ngModel)]="product.proCategoria" name="proCategoria" required>
+        </mat-form-field>
+
 
     </form>
 
@@ -35,7 +59,7 @@
     </button>
    
     <!-- Botão para cancelar a operação. Ao ser clicado, chama a função 'cancel()' que deve conter a lógica para cancelar a operação e possivelmente limpar o formulário -->
-    <button mat-raised-button (click)="cancel()">
+    <button mat-raised-button  type = "submit" (click)="cancel()">
         Cancelar
     </button>
 </mat-card>
