--- a/src/app/component/paymentMethod/payment-method-create/payment-method-create.component.html
+++ b/src/app/component/paymentMethod/payment-method-create/payment-method-create.component.html
@@ -2,7 +2,7 @@
     <mat-card-title>Nova Forma de Pagamento</mat-card-title>
     <form>
         <mat-form-field>
-            <input matInput placeholder="Tipo" [(ngModel)]="paymentMethod.fpgTipo" name="fpgTipo">
+            <input matInput placeholder="Tipo" [(ngModel)]="paymentMethod.fpgTipo" name="fpgTipo" required>
         </mat-form-field>
         <mat-form-field>
             <input matInput placeholder="Descrição" [(ngModel)]="paymentMethod.fpgDescricao" name="fpgDescricao">
