--- a/src/app/component/product/product-read/product-read.component.html
+++ b/src/app/component/product/product-read/product-read.component.html
@@ -26,15 +26,27 @@
       <td mat-cell *matCellDef="let row">{{row.proPrecoVenda | currency: 'BRL'}}</td>
     </ng-container>
 
+    <ng-container matColumnDef="proCategoria">
+      <th mat-header-cell *matHeaderCellDef>Categoria</th>
+      <td mat-cell *matCellDef="let row">{{row.proCategoria}}</td>
+    </ng-container>
+
     <ng-container matColumnDef="proQuantidade">
       <th mat-header-cell *matHeaderCellDef>Quantidade</th>
       <td mat-cell *matCellDef="let row">{{row.proQuantidade}}</td>
     </ng-container>
 
-    <ng-container matColumnDef="proDescricao">
-      <th mat-header-cell *matHeaderCellDef>Descrição</th>
-      <td mat-cell *matCellDef="let row">{{row.proDescricao}}</td>
+    <ng-container matColumnDef="proMarca">
+      <th mat-header-cell *matHeaderCellDef>Marca</th>
+      <td mat-cell *matCellDef="let row">{{row.proMarca}}</td>
     </ng-container>
+
+    <ng-container matColumnDef="proAtivo">
+      <th mat-header-cell *matHeaderCellDef>Ativo</th>
+      <td mat-cell *matCellDef="let row">{{row.proAtivo}}</td>
+    </ng-container>
+
+ 
 
 
     <!-- Definição da coluna para ações (editar e deletar) -->
