--- a/src/app/component/product/product-update/product-update.component.html
+++ b/src/app/component/product/product-update/product-update.component.html
@@ -16,6 +16,22 @@
         <mat-form-field>
             <input matInput placeholder="Descrição" [(ngModel)]="product.proDescricao" name="proDescricao">
         </mat-form-field>
+        <mat-form-field>
+            <input matInput placeholder="CodigoBarras" [(ngModel)]="product.proCodigoBarras" name="proCodigoBarras">
+        </mat-form-field>
+        <mat-form-field>
+            <input matInput placeholder="Marca" [(ngModel)]="product.proMarca" name="proMarca">
+        </mat-form-field>
+        <mat-form-field>
+            <mat-select placeholder="Ex: True or False" [(ngModel)]="product.proAtivo" name="proAtivo">
+              <mat-option [value]="true">True</mat-option>
+              <mat-option [value]="false">False</mat-option>
+            </mat-select>
+          </mat-form-field>
+
+          <mat-form-field>
+            <input matInput placeholder="Categoria" [(ngModel)]="product.proCategoria" name="proCategoria">
+        </mat-form-field>
     </form>
 
     <button mat-raised-button (click)="updateProduct()" color="primary">
