--- a/src/app/component/cliente/cliente-create/cliente-create.component.html
+++ b/src/app/component/cliente/cliente-create/cliente-create.component.html
@@ -3,23 +3,29 @@
     <mat-card-title>Novo Cliente</mat-card-title>
 
 <form>
-<mat-form-field>
-    <input matInput placeholder="Nome" [(ngModel)]="cliente.cliNome" name="cliNome" required>
+<mat-form-field appearance="outline">
+      <mat-label>Nome</mat-label>
+    <input matInput placeholder="" [(ngModel)]="cliente.cliNome" name="cliNome" required>
 </mat-form-field>
 
-<mat-form-field>
-    <input matInput placeholder="Email" [(ngModel)]="cliente.cliEmail" name="cliEmail" required>
+<mat-form-field appearance="outline">
+      <mat-label>Gmail</mat-label>
+    <input matInput placeholder=" " [(ngModel)]="cliente.cliEmail" name="cliEmail" required>
 </mat-form-field>
 
-<mat-form-field>
-    <input matInput placeholder="Cpf" [(ngModel)]="cliente.cliCpf" name="cliCpf" type="number" maxlength="11" required>
+<mat-form-field appearance="outline">
+    <mat-label>Cpf</mat-label>
+    <input matInput placeholder="###.###.###-##" [(ngModel)]="cliente.cliCpf" name="cliCpf" minlength="11" maxlength="11" required>
 </mat-form-field>
 
-<mat-form-field>
-    <input matInput placeholder="Telefone" [(ngModel)]="cliente.cliTelefone" name="cliTelefone" type="number" maxlength="11" required>
+<mat-form-field appearance="outline">
+      <mat-label>Telefone</mat-label>
+    <input matInput placeholder="" [(ngModel)]="cliente.cliTelefone" name="cliTelefone"  maxlength="11" required>
 </mat-form-field>
-<mat-form-field>
-    <input matInput placeholder="Endereço" [(ngModel)]="cliente.cliEndereco" name="cliEndereco" required>
+
+<mat-form-field appearance="outline">
+       <mat-label>Endereço</mat-label>
+    <input matInput placeholder="" [(ngModel)]="cliente.cliEndereco" name="cliEndereco" required>
 </mat-form-field>
 </form>
 
