--- a/src/app/component/paymentMethod/payment-method-create/payment-method-create.component.html
+++ b/src/app/component/paymentMethod/payment-method-create/payment-method-create.component.html
@@ -1,11 +1,14 @@
 <mat-card>
     <mat-card-title>Nova Forma de Pagamento</mat-card-title>
     <form>
-        <mat-form-field>
-            <input matInput placeholder="Tipo" [(ngModel)]="paymentMethod.fpgTipo" name="fpgTipo" required>
+        <mat-form-field appearance="outline" >
+              <mat-label>Tipo</mat-label>
+            <input matInput placeholder="" [(ngModel)]="paymentMethod.fpgTipo" name="fpgTipo" required>
         </mat-form-field>
-        <mat-form-field>
-            <input matInput placeholder="Descrição" [(ngModel)]="paymentMethod.fpgDescricao" name="fpgDescricao">
+
+        <mat-form-field appearance="outline">
+            <mat-label>Descrição</mat-label>
+            <input matInput placeholder="" [(ngModel)]="paymentMethod.fpgDescricao" name="fpgDescricao">
         </mat-form-field>
 
         <button mat-raised-button (click)="createPaymentMethod()" color="primary">
