--- a/src/app/component/paymentMethod/payment-method-delete/payment-method-delete.component.html
+++ b/src/app/component/paymentMethod/payment-method-delete/payment-method-delete.component.html
@@ -1,11 +1,15 @@
 <mat-card>
     <mat-card-title>Excluir Método de Pagamento</mat-card-title>
     <form>
-        <mat-form-field>
-            <input matInput placeholder="Descrição" [value]="paymentMethod.fpgDescricao" name="fpgDescricao" disabled>
+       
+        <mat-form-field appearance="outline">
+            <mat-label>Tipo*</mat-label>
+            <input matInput placeholder="" [value]="paymentMethod.fpgTipo" name="fpgTipo" disabled>
         </mat-form-field>
-        <mat-form-field>
-            <input matInput placeholder="Tipo" [value]="paymentMethod.fpgTipo" name="fpgTipo" disabled>
+
+        <mat-form-field appearance="outline">
+            <mat-label>Descrição*</mat-label>
+            <input matInput placeholder="" [value]="paymentMethod.fpgDescricao" name="fpgDescricao" disabled>
         </mat-form-field>
     </form>
 
