--- a/src/app/component/paymentMethod/payment-method-update/payment-method-update.component.html
+++ b/src/app/component/paymentMethod/payment-method-update/payment-method-update.component.html
@@ -1,12 +1,16 @@
 <mat-card>
     <mat-card-title>Alterar Forma de Pagamento</mat-card-title>
     <form>
-        <mat-form-field>
-            <input matInput placeholder="Descrição" [(ngModel)]="paymentMethod.fpgDescricao" name="fpgDescricao">
+        <mat-form-field appearance="outline">
+            <mat-label>Tipo*</mat-label>
+            <input matInput placeholder="" [(ngModel)]="paymentMethod.fpgTipo" name="fpgTipo">
         </mat-form-field>
-        <mat-form-field>
-            <input matInput placeholder="Tipo" [(ngModel)]="paymentMethod.fpgTipo" name="fpgTipo">
+
+        <mat-form-field appearance="outline">
+            <mat-label>Descriçao*</mat-label>
+            <input matInput placeholder="" [(ngModel)]="paymentMethod.fpgDescricao" name="fpgDescricao">
         </mat-form-field>
+      
     </form>
 
     <button mat-raised-button (click)="updatePaymentMethod()" color="primary">
