--- a/src/app/component/product/product-delete/product-delete.component.html
+++ b/src/app/component/product/product-delete/product-delete.component.html
@@ -1,36 +1,52 @@
 <mat-card>
     <mat-card-title>Excluir Produto</mat-card-title>
     <form>
-        <mat-form-field>
-            <input matInput placeholder="Nome" [value]="product.proNome" name="proNome" disabled>
+        <mat-form-field appearance="outline">
+            <mat-label>Nome do Produto*</mat-label>
+            <input matInput placeholder="" [value]="product.proNome" name="proNome" disabled>
         </mat-form-field>
-        <mat-form-field>
-            <input matInput placeholder="Preço de custo(R$)" [value]="product.proPrecoCusto" name="proPrecoCusto" disabled>
+
+        <mat-form-field appearance="outline"> 
+            <mat-label>Preço de Custo(R$)*</mat-label>
+            <input matInput placeholder="" [value]="product.proPrecoCusto" name="proPrecoCusto" disabled>
         </mat-form-field>
-        <mat-form-field>
-            <input matInput placeholder="Preço de venda (R$)" [value]="product.proPrecoVenda" name="proPrecoVenda" disabled>
+
+        <mat-form-field appearance="outline">
+            <mat-label>Preço de Venda(R$)*</mat-label>
+            <input matInput placeholder="" [value]="product.proPrecoVenda" name="proPrecoVenda" disabled>
         </mat-form-field>
-        <mat-form-field>
-            <input matInput placeholder="Quantidade" [value]="product.proQuantidade" name="proQuantidade" disabled>
+
+        <mat-form-field appearance="outline">
+            <mat-label>Quantidade*</mat-label>
+            <input matInput placeholder="" [value]="product.proQuantidade" name="proQuantidade" disabled>
         </mat-form-field>
-        <mat-form-field>
-            <input matInput placeholder="Descrição" [value]="product.proDescricao" name="proDescricao" disabled>
+
+        <mat-form-field appearance="outline">
+            <mat-label>Descrição*</mat-label>
+            <input matInput placeholder="" [value]="product.proDescricao" name="proDescricao" disabled>
         </mat-form-field>
-        <mat-form-field>
-            <input matInput placeholder="Codigo de Barras" [value]="product.proCodigoBarras" name="proCodigoBarras" disabled>
+
+        <mat-form-field appearance="outline">
+            <mat-label>Código de Barras*</mat-label>
+            <input matInput placeholder="" [value]="product.proCodigoBarras" name="proCodigoBarras" disabled>
         </mat-form-field>
-        <mat-form-field>
-            <input matInput placeholder="Marca" [value]="product.proMarca" name="proMarca" disabled>
+
+        <mat-form-field appearance="outline">
+            <mat-label>Marca*</mat-label>
+            <input matInput placeholder="" [value]="product.proMarca" name="proMarca" disabled>
         </mat-form-field>
-        <mat-form-field>
-            <mat-select placeholder="Ex: True or False" [(ngModel)]="product.proAtivo" name="proAtivo" >
-              <mat-option [value]="true" disable>True</mat-option >
-              <mat-option [value]="false" disable>False</mat-option>
-            </mat-select>
+
+        <mat-form-field appearance="outline">
+            <mat-label>Categoria*</mat-label>
+            <input matInput placeholder="" [(ngModel)]="product.proCategoria" name="proCategoria" disabled>
+        </mat-form-field>
+
+        
+        <mat-form-field appearance="outline">
+               <input matInput  [(ngModel)]="product.proAtivo" name="proAtivo" disabled>
           </mat-form-field>
-          <mat-form-field>
-            <input matInput placeholder="Categoria" [(ngModel)]="product.proCategoria" name="proCategoria" disabled>
-        </mat-form-field>
+          
+      
     </form>
 
     <button mat-raised-button (click)="deleteProduct()" color="warn">
