--- a/src/app/component/supplier/supplier-create/supplier-create.component.html
+++ b/src/app/component/supplier/supplier-create/supplier-create.component.html
@@ -3,14 +3,16 @@
     <form>
       
         <mat-form-field>
-            <input matInput placeholder="Razão Social" [(ngModel)]="supplier.forRazaoSocial" name="razaoSocial" required>
+            <mat-label>Razão Social</mat-label>
+            <input matInput placeholder="" [(ngModel)]="supplier.forRazaoSocial" name="razaoSocial" required>
         </mat-form-field>
         <mat-form-field>
-            <input matInput placeholder="Nome Fantasia" [(ngModel)]="supplier.forNomeFantasia" name="nomeFantasia" required>
+            <mat-label>Nome da Fantasia</mat-label>
+            <input matInput placeholder="" [(ngModel)]="supplier.forNomeFantasia" name="nomeFantasia" required>
         </mat-form-field>
         <mat-form-field>
             <mat-label>Cnpj*</mat-label>
-            <input matInput placeholder="CNPJ" [(ngModel)]="supplier.forCnpj" name="cnpj"  required minlength="14" maxlength="14">
+            <input matInput placeholder="" [(ngModel)]="supplier.forCnpj" name="cnpj"  required minlength="14" maxlength="14">
         </mat-form-field>
     </form>
 
