--- a/src/app/component/supplier/supplier-read/supplier-read.component.css
+++ b/src/app/component/supplier/supplier-read/supplier-read.component.css
@@ -1,5 +1,5 @@
 table{
-    background-color: #725b75;
+    background-color: #8ab3cf;
     width: 100%;
 }
 
@@ -12,6 +12,6 @@ table{
 }
 
 th, td{
-    color: #e3cebd;
+    color: #e4ebf0;
 }
 
