--- a/src/app/views/product-crud/product-crud.component.css
+++ b/src/app/views/product-crud/product-crud.component.css
@@ -1,14 +1,24 @@
-button {
-    background-color: #007bff; /* Azul simples */
-    color: white; 
-    padding: 10px 15px; /* Espaçamento confortável */
-    border: 1px solid #007bff; /* Borda da mesma cor */
-    border-radius: 4px; /* Bordas ligeiramente arredondadas */
-    font-size: 14px; 
-    cursor: pointer;
-    transition: background-color 0.3s ease; /* Transição suave para mudança de cor */
-}
 
-button:hover {
-    background-color: #0056b3; /* Cor mais escura ao passar o mouse */
-}
+
+button{
+    background-color: #4180ab; /* Azul */
+    border: none; /* Sem borda */
+    color: #f0e4e4; /* Texto branco */
+    padding: 15px 32px; /* Espaçamento interno */
+    text-align: center; /* Centraliza o texto */
+    text-decoration: none; /* Remove sublinhado */
+    display: inline-block; /* Permite definir largura e altura */
+    font-size: 16px; /* Tamanho da fonte */
+    margin: 4px 2px; /* Margem */
+    cursor: pointer; /* Muda o cursor ao passar o mouse */
+    border-radius: 8px; /* Bordas arredondadas */
+    transition: background-color 0.3s, transform 0.2s; /* Transição suave */
+    }
+   
+    button:hover {
+    background-color: #316c94; /* Azul mais escuro ao passar o mouse */
+    }
+   
+    button:active {
+    transform: scale(0.95); /* Efeito de pressionar */
+    }
