--- a/src/app/component/cliente/cliente-create/cliente-create.component.css
+++ b/src/app/component/cliente/cliente-create/cliente-create.component.css
@@ -33,3 +33,7 @@ button{
     button:active {
     transform: scale(0.95); /* Efeito de pressionar */
     }
+
+    mat-card{
+        box-shadow: none;
+    }
