--- a/src/app/component/cliente/cliente-create/cliente-create.component.html
+++ b/src/app/component/cliente/cliente-create/cliente-create.component.html
@@ -15,7 +15,7 @@
 
 <mat-form-field appearance="outline">
     <mat-label>Cpf</mat-label>
-    <input matInput placeholder="###.###.###-##" [(ngModel)]="cliente.cliCpf" name="cliCpf" minlength="11" maxlength="11" required>
+    <input matInput placeholder="" [(ngModel)]="cliente.cliCpf" name="cliCpf"  maxlength="11" required>
 </mat-form-field>
 
 <mat-form-field appearance="outline">
