--- a/src/app/component/product/product-delete/product-delete.component.css
+++ b/src/app/component/product/product-delete/product-delete.component.css
@@ -33,3 +33,6 @@ button{
     button:active {
     transform: scale(0.95); /* Efeito de pressionar */
     }
+    mat-card{
+        box-shadow: none;
+    }
