--- a/src/app/component/template/nav/nav.component.html
+++ b/src/app/component/template/nav/nav.component.html
@@ -8,7 +8,7 @@
                 <span>Início</span>
             </a>
             <a mat-list-item routerLink="/clientes">
-                <i class="material-icons">people</i> <!-- Ícone de cliente -->
+                <i class="material-icons">account_circle</i> <!-- Ícone de cliente -->
                 <span>Cliente</span>
             </a>
 
