--- a/src/app/component/product/product-create/product-create.component.css
+++ b/src/app/component/product/product-create/product-create.component.css
@@ -34,3 +34,7 @@ button{
     button:active {
     transform: scale(0.95); /* Efeito de pressionar */
     }
+
+    mat-card{
+        box-shadow: none;
+    }
