--- a/src/app/component/paymentMethod/payment-method-delete/payment-method-delete.component.html
+++ b/src/app/component/paymentMethod/payment-method-delete/payment-method-delete.component.html
@@ -11,6 +11,21 @@
             <mat-label>Descrição*</mat-label>
             <input matInput placeholder="" [value]="paymentMethod.fpgDescricao" name="fpgDescricao" disabled>
         </mat-form-field>
+
+        <mat-form-field appearance="outline">
+            <mat-label>Permite Parcelamento?*</mat-label>
+            <input matInput placeholder="" [value]="paymentMethod.fpgPermiteParcelamento" name="fpgPermiteParcelamento" disabled>
+        </mat-form-field>
+
+        <mat-form-field appearance="outline">
+            <mat-label>MaxParcelas*</mat-label>
+            <input matInput placeholder="" [value]="paymentMethod.fpgNumMaxParcelas" name="fpgNumMaxParcelas" disabled>
+        </mat-form-field>
+       
+        <mat-form-field appearance="outline">
+            <mat-label>TaxaAdicional*</mat-label>
+            <input matInput placeholder="" [value]="paymentMethod.fpgTaxaAdicional" name="fpgTaxaAdicional" disabled>
+        </mat-form-field>
     </form>
 
     <button mat-raised-button (click)="deletePaymentMethod()" color="warn">
