--- a/src/app/component/product/product-create/product-create.component.html
+++ b/src/app/component/product/product-create/product-create.component.html
@@ -64,7 +64,7 @@
     </button>
    
     <!-- Botão para cancelar a operação. Ao ser clicado, chama a função 'cancel()' que deve conter a lógica para cancelar a operação e possivelmente limpar o formulário -->
-    <button mat-raised-button  type = "submit" (click)="cancel()">
+    <button mat-raised-button (click)="cancel()">
         Cancelar
     </button>
 </mat-card>
