--- a/src/app/component/paymentMethod/payment-method-read/payment-method-read.component.html
+++ b/src/app/component/paymentMethod/payment-method-read/payment-method-read.component.html
@@ -20,6 +20,25 @@
     </ng-container>
 
 
+    <ng-container matColumnDef="fpgPermiteParcelamento">
+      <th mat-header-cell *matHeaderCellDef>Permite Parcelamento?</th>
+      <td mat-cell *matCellDef="let row">{{row.fpgPermiteParcelamento}}</td>
+    </ng-container>
+
+
+    <ng-container matColumnDef="fpgNumMaxParcelas">
+      <th mat-header-cell *matHeaderCellDef>MaxParcelas</th>
+      <td mat-cell *matCellDef="let row">{{row.fpgNumMaxParcelas}}</td>
+    </ng-container>
+
+
+    
+    <ng-container matColumnDef="fpgTaxaAdicional">
+      <th mat-header-cell *matHeaderCellDef>Taxa Adicional</th>
+      <td mat-cell *matCellDef="let row">{{row.fpgTaxaAdicional}}</td>
+    </ng-container>
+
+
 
     <!-- Action Column -->
     <ng-container matColumnDef="action">
