--- a/src/app/component/paymentMethod/payment-method-update/payment-method-update.component.html
+++ b/src/app/component/paymentMethod/payment-method-update/payment-method-update.component.html
@@ -10,7 +10,26 @@
             <mat-label>Descriçao*</mat-label>
             <input matInput placeholder="" [(ngModel)]="paymentMethod.fpgDescricao" name="fpgDescricao">
         </mat-form-field>
-      
+
+        <mat-form-field appearance="outline">
+            <mat-label>Permitir Parcelamento?</mat-label>
+            <mat-select matInput placeholder="Permitir Parcelamento? " [(ngModel)]="paymentMethod.fpgPermiteParcelamento" name="fpgPermiteParcelamento" required>
+              <mat-option [value]="true">Sim</mat-option>
+              <mat-option [value]="false">Não</mat-option>
+            </mat-select>
+          </mat-form-field>
+
+          
+             <mat-form-field appearance="outline">
+            <mat-label>Máximo de Parcelas</mat-label>
+            <input matInput type = "number" placeholder="" [(ngModel)]="paymentMethod.fpgNumMaxParcelas" name="fpgNumMaxParcelas" required>
+        </mat-form-field>
+
+        <mat-form-field appearance="outline">
+            <mat-label>TaxaAdicional*</mat-label>
+            <input matInput placeholder="%" [(ngModel)]="paymentMethod.fpgTaxaAdicional" name="fpgTaxaAdicional">
+        </mat-form-field>
+
     </form>
 
     <button mat-raised-button (click)="updatePaymentMethod()" color="primary">
